[tool.poetry]
name = "mdocker"
version = "0.2.0"
description = "A wrapper for multiplatform Docker image builds."
authors = ["seppzer0"]
readme = "README.md"
packages = [{include = "mdocker"}]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.12.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
