[tool.poetry]
name = "mdocker"
version = "0.2.1"
description = "An easy-to-use wrapper for multiplatform Docker image builds."
keywords = ["docker", "docker-buildx"]
authors = ["seppzer0"]
repository = "https://github.com/seppzer0/mdocker"
readme = "README.md"
license = "MIT"
packages = [{include = "mdocker"}]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.12.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
